# quanxai-demo

./: .gitignore
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: seed_data.py
backend/src/quanxai/: __init__.py  config.py  main.py
backend/src/quanxai/database/: __init__.py  engine.py  models.py
backend/src/quanxai/routers/: __init__.py  analytics.py  audit.py  budgets.py  cache.py  guardrails.py  keys.py  logs.py  organizations.py  products.py  tags.py  teams.py  usage.py  users.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/api-reference/: page.tsx
frontend/app/dashboard/audit/: page.tsx
frontend/app/dashboard/budgets/: page.tsx
frontend/app/dashboard/caching/: page.tsx
frontend/app/dashboard/guardrails/: page.tsx
frontend/app/dashboard/keys/: page.tsx
frontend/components/charts/: CachingMetricsChart.tsx  CostByModelChart.tsx  DailyBarChart.tsx  SpendTrendChart.tsx  SuccessFailedChart.tsx
frontend/components/layout/: Sidebar.tsx
frontend/components/ui/: Badge.tsx  ChartCard.tsx  DataTable.tsx  DateRangeSelector.tsx  DropdownMenu.tsx  FormInput.tsx  KPICard.tsx  Modal.tsx  Tabs.tsx
frontend/data/mock/: audit.ts  budgets.ts  cache.ts  guardrails.ts  index.ts  keys.ts  logs.ts  models.ts  organization.ts  products.ts  tags.ts  teams.ts  usage.ts  users.ts
frontend/lib/api/: client.ts
frontend/lib/hooks/: useAPI.ts
frontend/lib/utils/: formatters.ts
(+21 files in other folders)
